--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -209,8 +209,9 @@ md-datepicker
 		.red
 			background-color: #ff8a80
 
-md-dialog-content
-	padding 0 !important
+form
+	md-dialog-content
+		padding 0 !important
 
 md-tab-item
 	max-width none !important
@@ -220,4 +221,3 @@ md-tab-item
 
 .md-toast.success
 	background-color green
-	
