--- a/client/app/views/blocks/app_header.html
+++ b/client/app/views/blocks/app_header.html
@@ -6,9 +6,7 @@
     <span>{{app.name}} {{app.module}}</span>
   </h2>
   <span flex></span>
-  <md-button class="md-icon-button" aria-label="Favorite">
-    <md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>
-  </md-button>
+
   <md-button class="md-icon-button" aria-label="More" ng-click="close()">
       <img src="/images/user0.jpg" class="md-avatar">
   </md-button>
@@ -17,8 +15,8 @@
               <md-icon md-font-icon="fa fa-cog fa-lg"></md-icon>
           </md-button>
           <md-menu-content>
-              <md-menu-item><md-button ng-click="$mdCloseMenu()" ui-sref="home.profile">Configuración</md-button></md-menu-item>
-              <md-menu-item><md-button ng-click="Logout()" ui-sref="home.dashboard">Log out</md-button></md-menu-item>
+              <md-menu-item><md-button ng-click="$mdCloseMenu()">Configuración</md-button></md-menu-item>
+              <md-menu-item><md-button ng-click="Logout()" >Log out</md-button></md-menu-item>
           </md-menu-content>
       </md-menu>
 </div>
