Se agrego interfaz plan de estudios

--- a/client/app/views/blocks/app_sidenav.html
+++ b/client/app/views/blocks/app_sidenav.html
@@ -5,7 +5,7 @@
 
 <div layout="column" layout-align="center center" style="height:160px;">
   <div layout-align="center start"  layout-padding>
-    <img src="/images/user0.jpg" width="100" height="100" class="img-round user-logo-main">
+    <img src="/images/logo.jpg" width="100" height="100" class="img-round user-logo-main">
   </div>
 
   <p class="tc-white-1" > {{$root.USER.firstname}} {{$root.USER.lastname}}</p>
