--- a/client/app/views/planestudios/form.html
+++ b/client/app/views/planestudios/form.html
@@ -1,134 +1,75 @@
-<md-dialog aria-label="List dialog">
-<md-dialog-content>
-  <md-toolbar>
-    <div class="md-toolbar-tools">
-      <span>{{title}}</span>
-      <!-- fill up the space between left and right area -->
-      <span flex></span>
-      <md-button class="md-icon-button" aria-label="More" ng-click="Cancel()">
-       <md-icon md-font-icon="fa fa-close fa-lg"></md-icon>
-     </md-button>
-    </div>
-  </md-toolbar>
-
-
-    <div class="dialog__content p++">
-    <form name="myForm" >
-     <div  flex-container="row" flex-gutter="24">
-            <div flex-item>
-                <md-input-container class="md-block">
-                  <label>Nombre</label>
-                  <input required name="nombre" ng-model="model.nombre">
-                  <div ng-messages="myForm.nombre.$error"  ng-if="submited">
-                    <div ng-message="required">{{message.Required}}</div>
-                  </div>
-                </md-input-container>
-            </div>
-             <div flex-item>
-               <md-input-container class="md-block">
-                 <label>Resolución</label>
-                 <input required name="resolucion" ng-model="model.resolucion">
-                 <div ng-messages="myForm.resolucion.$error"  ng-if="submited">
-                   <div ng-message="required">{{message.Required}}</div>
-                 </div>
-               </md-input-container>
-            </div>
+<md-dialog aria-label="{{title}}">
+  <form name="myForm" novalidate>
+    <md-toolbar>
+      <div class="md-toolbar-tools">
+        <h2>{{title}}</h2>
+        <span flex></span>
+        <md-button class="md-icon-button" ng-click="Cancel()">
+          <md-icon md-font-icon="fa fa-close fa-lg" aria-label="Close dialog"></md-icon>
+        </md-button>
+      </div>
+    </md-toolbar>
+    <md-dialog-content style="min-width:800px;max-height:810px; ">
+      <md-content class="md-padding">
+        <div  flex-container="row" flex-gutter="24">
             <div flex-item>
               <md-input-container class="md-block">
-                <label>Fecha de Resolución</label>
-                <input required name="nombre" ng-model="model.fecharesolucion">
-                <div ng-messages="myForm.nombre.$error"  ng-if="submited">
+                <label>Facultad</label>
+                <input required name="facultad" ng-model="facultad.nombre" readonly>
+                <div ng-messages="myForm.facultad.$error"  ng-if="submited">
                   <div ng-message="required">{{message.Required}}</div>
                 </div>
               </md-input-container>
+
             </div>
         </div>
-
         <div  flex-container="row" flex-gutter="24">
-            <div flex-item>
-              <md-input-container>
-                <label>Facultad</label>
-                <input type="text" ng-model="filters.facultad.nombre" name="facultad" readonly="true" required>
-              </md-input-container>
+          <div flex-item>
+          <md-input-container class="md-block">
+            <label>Nombre de Escuela</label>
+            <input required name="nombre" ng-model="model.nombre">
+            <div ng-messages="myForm.nombre.$error"  ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
             </div>
-            <div flex-item>
-              <md-input-container>
-                <label>Escuela</label>
-                <input type="text" ng-model="filters.facultad.nombre" name="facultad" readonly="true" required>
-              </md-input-container>
-            </div>
-
+          </md-input-container>
+          </diV>
         </div>
-        </form>
-    </div>
 
-    <div class="dialog__actions">
+
+           <div  flex-container="row" flex-gutter="24">
+               <div flex-item>
+                   <md-input-container class="md-block">
+                     <label>Código</label>
+                     <input required name="codigo" ng-model="model.codigo">
+                     <div ng-messages="myForm.codigo.$error"  ng-if="submited">
+                       <div ng-message="required">{{message.Required}}</div>
+                     </div>
+                   </md-input-container>
+               </div>
+               <div flex-item>
+                 <md-input-container class="md-block">
+                   <label>Resolución</label>
+                   <input required name="resolucion" ng-model="model.resolucion">
+                   <div ng-messages="myForm.resolucion.$error"  ng-if="submited">
+                     <div ng-message="required">{{message.Required}}</div>
+                   </div>
+                 </md-input-container>
+               </div>
+           </div>
+
+      </md-content>
+      <div class="dialog__actions">
+          <div class="pull-left">
+            <md-checkbox ng-model="model.activo">
+                 Activo
+               </md-checkbox>
+          </div>
          <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
          <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
     </div>
-  </md-dialog-content>
+    </md-dialog-content>
+    <md-dialog-actions layout="row">
+
+    </md-dialog-actions>
+  </form>
 </md-dialog>
-
-
-
-
-
-<lx-dialog class="dialog dialog--l text-left" id="form" onclose="closingDialog()">
-    <div class="dialog__header">
-        <div class="toolbar bgc-light-blue-50 pl++">
-            <span class="toolbar__label tc-white fs-title">
-                {{TitleForm}}
-            </span>
-
-            <div class="toolbar__right">
-                <button class="btn btn--l btn--white btn--icon" lx-ripple lx-dialog-close>
-                    <i class="fa fa-remove"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <div class="dialog__content p++">
-    <form name="myForm" >
-    <div  flex-container="row" flex-gutter="24">
-            <div flex-item>
-                <lx-text-field label="Facultad" >
-                    <input type="text" ng-model="filters.facultad.nombre" name="facultad" readonly="true" required>
-                </lx-text-field>
-                <span ng-messages="myForm.facultad.$error" class="tc-red-500" ng-if="submited">
-                  <small ng-message="required">{{errors.required}}</small>
-                </span>
-            </div>
-            <div flex-item>
-                <lx-text-field label="Escuela" >
-                    <input type="text" ng-model="filters.escuela.nombre" name="escuela" readonly="true" required>
-                </lx-text-field>
-                 <span ng-messages="myForm.escuela.$error" class="tc-red-500" ng-if="submited">
-                  <small ng-message="required">{{errors.required}}</small>
-                </span>
-            </div>
-        </div>
-        <div  flex-container="row" flex-gutter="24">
-            <div flex-item>
-                <lx-text-field label="Nombre">
-                    <input type="text" ng-model="model.nombre" name="nombre" required>
-                </lx-text-field>
-                <span ng-messages="myForm.nombre.$error" class="tc-red-500" ng-if="submited">
-                  <small ng-message="required">{{errors.required}}</small>
-                </span>
-            </div>
-        </div>
-
-     <div  flex-container="row" flex-gutter="24">
-            <div flex-item>
-                     <lx-select ng-model="model.periodo" placeholder="Periodo de Inicio" choices="periodos" floating-label>
-                        <lx-select-selected>
-                            {{ $selected.nombre }}
-                        </lx-select-selected>
-
-                        <lx-select-choices>
-                            {{ $choice.nombre }}
-                        </lx-select-choices>
-                    </lx-select>
-                    <small ng-if="!model.periodo&&submited"  class="tc-red-500">{{errors.required}}</small>
-            </div>
