--- a/client/app/views/app.html
+++ b/client/app/views/app.html
@@ -8,6 +8,112 @@
 
   <md-content class="page-content" layout-align="center start" style="background-color:#f2f2f2">
     <div ui-view>
+      <div class="dashboard display-animation" style="margin: 0 auto; width: 1130px;">
+  <a href class="tile tile-lg tile-light-green ripple-effect" ui-sref="app.facultad">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img" style="background-image: url(http://www.google.com/design/images/webdesigner.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <p><i class="fa fa-university fa-5x"></i> </p>
+          <span class="title">Facultades</span>
+          <p>esta tarjeta se generara de acuerdo a las preferencias y uso que el usuario le de al sistema. Si el usuario accede de manera constante a esta opción, esta tarjeta se mantendra de mayor tamaño como una tarjeta relevante</p>
+        </span>
+      </span>
+    </span>
+  </a>
+  <a class="tile tile-lg tile-sqr bgc-light-green-900 ripple-effect tc-white" href="#">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img" style="background-image: url(http://www.google.com/design/images/materialreel.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <p>
+            <i class="fa fa-calendar fa-5x"></i>
+          </p>
+          <span class="title tc-white">Periodo</span>
+          <p>Si el usuario accede pocas veces a una determinada opcion del menu esta tendra un tamaño mucho menor</p>
+        </span>
+      </span>
+    </span>
+  </a>
+  <a class="tile tile-lg tile-sqr tile-amber ripple-effect bgc-blue-grey-600" href="#">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img" style="background-image: url(http://www.google.com/design/images/principles.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <p>
+            <i class="fa fa-book fa-5x"></i>
+          </p>
+          <span class="title">Plan de Estudios<br><span class="caption">5 tareas pendientes</span></span>
+        </span>
+      </span>
+    </span>
+  </a>
+  <a class="tile tile-lg tile-sqr tile-amber ripple-effect" href="#">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img tile-img-bg" style="background-image: url(http://www.google.com/design/images/doodlearchive.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <p>
+            <i class="fa fa-user fa-5x"></i>
+          </p>
+          <span class="title">Registro de Ingresantes<span class="caption">5 tareas pendientes</span></span>
+          
+        </span>
+      </span>
+    </span>
+  </a>
+  <a class="tile tile-lg tile-light-blue ripple-effect" href="#">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img tile-img-bg" style="background-image: url(http://www.google.com/design/images/googleplus.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <span class="title">Google+</span>
+        </span>
+      </span>
+    </span>
+  </a>
+  <a class="tile tile-lg tile-sqr tile-red ripple-effect" href="#">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img" style="background-image: url(http://www.google.com/design/images/design-minutes.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <span class="title">Design Minutes</span>
+        </span>
+      </span>
+    </span>
+  </a>
+  <a class="tile tile-lg tile-sqr tile-indigo ripple-effect" href="#">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img" style="background-image: url(http://www.google.com/design/images/cast.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <span class="title">Google Cast UX</span>
+        </span>
+      </span>
+    </span>
+  </a>
+  <a class="tile tile-lg tile-sqr tile-deep-orange ripple-effect" href="#">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img" style="background-image: url(http://www.google.com/design/images/glass.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <span class="title">Glass Design</span>
+        </span>
+      </span>
+    </span>
+  </a>
+  <a class="tile tile-lg tile-light-green ripple-effect" href="#">
+    <span class="content-wrapper">
+      <span class="tile-content">
+        <span class="tile-img tile-img-bg" style="background-image: url(http://www.google.com/design/images/webdesigner.png);"></span>
+        <span class="tile-holder tile-holder-sm">
+          <span class="title">Google Web Designer</span>
+        </span>
+      </span>
+    </span>
+  </a>
+</div>
+
       <md-button ng-click="New($event)" class="md-fab" aria-label="Use Android" style="position:fixed; right:40px;bottom:40px;">
         <md-icon md-font-icon="fa fa-question fa-lg"></md-icon>
       </md-button>
