--- a/client/app/views/pabellones/form.html
+++ b/client/app/views/pabellones/form.html
@@ -1,46 +1,52 @@
-<md-dialog aria-label="List dialog">
-  <md-dialog-content>
+<md-dialog aria-label="{{title}}">
+  <form name="myForm" novalidate>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <span>{{title}}</span>
-        <!-- fill up the space between left and right area -->
+        <h2>{{title}}</h2>
         <span flex></span>
-        <md-button class="md-icon-button" aria-label="More" ng-click="Cancel()">
-          <md-icon md-font-icon="fa fa-close fa-lg"></md-icon>
+        <md-button class="md-icon-button" ng-click="Cancel()">
+          <md-icon md-font-icon="fa fa-close fa-lg" aria-label="Close dialog"></md-icon>
         </md-button>
       </div>
     </md-toolbar>
-
-
-    <div class="dialog__content p++">
-      <form name="myForm">
-        <div flex-container="row" flex-gutter="24">
-          <div flex-item>
-            <md-input-container class="md-block">
-              <label>Nombre</label>
-              <input required name="nombre" ng-model="model.nombre">
-              <div ng-messages="myForm.nombre.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
+    <md-dialog-content style="min-width:500px;max-height:810px; ">
+      <md-content class="md-padding">
+        <div  flex-container="row" flex-gutter="24">
+          <div flex-container="row" flex-gutter="24">
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Nombre</label>
+                <input required name="nombre" ng-model="model.nombre">
+                <div ng-messages="myForm.nombre.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Abreviatura</label>
+                <input required name="abreviatura" ng-model="model.abreviatura">
+                <div ng-messages="myForm.abreviatura.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
           </div>
-          <div flex-item>
-            <md-input-container class="md-block">
-              <label>Abreviatura</label>
-              <input required name="abreviatura" ng-model="model.abreviatura">
-              <div ng-messages="myForm.abreviatura.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
+           </div>
+
+      </md-content>
+      <div class="dialog__actions">
+          <div class="pull-left">
+            <md-checkbox ng-model="model.activo">
+                 Activo
+               </md-checkbox>
           </div>
-        </div>
-
-      </form>
+         <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+         <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
     </div>
+    </md-dialog-content>
+    <md-dialog-actions layout="row">
 
-    <div class="dialog__actions">
-      <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-      <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-    </div>
-  </md-dialog-content>
+    </md-dialog-actions>
+  </form>
 </md-dialog>
