--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -221,3 +221,10 @@ md-tab-item
 
 .md-toast.success
 	background-color green
+
+md-datepicker
+	.md-datepicker-button
+		display none
+	.md-datepicker-input-container
+		width 100%
+		margin-left 0
