--- a/client/app/views/app.html
+++ b/client/app/views/app.html
@@ -7,8 +7,8 @@
 
 
   <md-content class="page-content" layout-align="center start" style="background-color:#f2f2f2">
-    <div ui-view>
-      <div class="dashboard display-animation" style="margin: 0 auto; width: 1130px;">
+    <div flex ui-view>
+      <div class="dashboard display-animation" style="margin: 0 auto;max-width:1170; " flex layout-align="center start">
   <a href class="tile tile-lg tile-light-green ripple-effect" ui-sref="app.facultad">
     <span class="content-wrapper">
       <span class="tile-content">
@@ -57,7 +57,7 @@
             <i class="fa fa-user fa-5x"></i>
           </p>
           <span class="title">Registro de Ingresantes<span class="caption">5 tareas pendientes</span></span>
-          
+
         </span>
       </span>
     </span>
