--- a/client/app/views/cursos/form.html
+++ b/client/app/views/cursos/form.html
@@ -1,77 +1,65 @@
-<md-dialog aria-label="List dialog">
-  <md-dialog-content>
+<md-dialog aria-label="{{title}}">
+  <form name="myForm" novalidate>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <span>{{title}}</span>
-        <!-- fill up the space between left and right area -->
+        <h2>{{title}}</h2>
         <span flex></span>
-        <md-button class="md-icon-button" aria-label="More" ng-click="Cancel()">
-          <md-icon md-font-icon="fa fa-close fa-lg"></md-icon>
+        <md-button class="md-icon-button" ng-click="Cancel()">
+          <md-icon md-font-icon="fa fa-close fa-lg" aria-label="Close dialog"></md-icon>
         </md-button>
       </div>
     </md-toolbar>
+    <md-dialog-content style="min-width:600px;max-height:810px; ">
+      <md-content class="md-padding">
+        <div  flex-container="row" flex-gutter="24">
+               <div flex-item>
+                   <md-input-container class="md-block">
+                     <label>Código</label>
+                     <input required name="codigo" ng-model="model.codigo">
+                     <div ng-messages="myForm.codigo.$error"  ng-if="submited">
+                       <div ng-message="required">{{message.Required}}</div>
+                     </div>
+                     <div ng-if="ValidationError['codigo'].kind" >
+                       {{ValidationError['codigo'].message}}
+                     </div>
+                   </md-input-container>
+               </div>
+               <div flex-item>
+                 <md-input-container class="md-block">
+                   <label>Tipo</label>
+                  <md-select ng-model="model.tipo">
+                   <md-option value="General">General</md-option>
+                   <md-option value="Carrera">Carrera</md-option>
+                 </md-select>
+               </md-input-container>
+               </div>
+           </div>
+           <div  flex-container="row" flex-gutter="24">
+               <div flex-item>
+                 <md-input-container class="md-block">
+                   <label>Nombre de Curso</label>
+                   <input required name="nombre" ng-model="model.nombre">
+                   <div ng-messages="myForm.nombre.$error"  ng-if="submited">
+                     <div ng-message="required">{{message.Required}}</div>
+                   </div>
+                 </md-input-container>
 
+               </div>
+           </div>
 
-
-    <div class="dialog__content p++">
-      <form name="myForm">
-        <div flex-container="row" flex-gutter="24">
-          <div flex-item>
-            <md-input-container class="md-block">
-              <label>Tipo de Curso</label>
-              <input required name="tipocurso" ng-model="model.tipocurso">
-              <div ng-messages="myForm.tipocurso.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
+      </md-content>
+      <div class="dialog__actions">
+          <div class="pull-left">
+            <md-checkbox ng-model="model.activo">
+                 Activo
+               </md-checkbox>
           </div>
-          <div flex-item>
-            <md-input-container class="md-block">
-              <label>Código</label>
-              <input required name="codigo" ng-model="model.codigo">
-              <div ng-messages="myForm.codigo.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
-          </div>
-          <div flex-item>
-            <md-input-container class="md-block">
-              <label>Nombre</label>
-              <input required name="nombre" ng-model="model.nombre">
-              <div ng-messages="myForm.nombre.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
-          </div>
-        </div>
-        <div flex-container="row" flex-gutter="24">
-          <div flex-item>
-            <md-input-container class="md-block">
-              <label>Facultad</label>
-              <input required name="facultad" ng-model="model.facultad">
-              <div ng-messages="myForm.facultad.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
-          </div>
-        </div>
-        <div flex-container="row" flex-gutter="24">
-          <div flex-item>
-            <md-input-container class="md-block">
-              <label>Escuela</label>
-              <input required name="escuela" ng-model="model.escuela">
-              <div ng-messages="myForm.escuela.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
-          </div>
-        </div>
-      </form>
+         <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+         <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
     </div>
+    </md-dialog-content>
+    <md-dialog-actions layout="row">
 
-    <div class="dialog__actions">
-      <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-      <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-    </div>
-  </md-dialog-content>
+    </md-dialog-actions>
+  </form>
 </md-dialog>
