--- a/client/app/views/cursos/form.html
+++ b/client/app/views/cursos/form.html
@@ -15,9 +15,10 @@
                <div flex-item>
                    <md-input-container class="md-block">
                      <label>Código</label>
-                     <input required name="codigo" ng-model="model.codigo">
+                     <input required name="codigo" ng-model="model.codigo" validate-unique query-model='cursos'  attribute='codigo'>
                      <div ng-messages="myForm.codigo.$error"  ng-if="submited">
                        <div ng-message="required">{{message.Required}}</div>
+                       <div ng-message="validateUnique">{{message.validateUnique}}</div>
                      </div>
                      <div ng-if="ValidationError['codigo'].kind" >
                        {{ValidationError['codigo'].message}}
