--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -221,3 +221,11 @@ md-tab-item
 
 .md-toast.success
 	background-color green
+
+.green-border > thead > tr > th,
+.green-border > tbody > tr > th,
+.green-border > tfoot > tr > th,
+.green-border > thead > tr > td,
+.green-border > tbody > tr > td,
+.green-border > tfoot > tr > td
+	border-color #43A047
