--- a/client/app/views/asignaraulas/index.html
+++ b/client/app/views/asignaraulas/index.html
@@ -11,14 +11,15 @@
 <!--tabla: contiene el listado de elementos-->
 <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"></md-progress-linear>
 
-<md-toolbar layout="column" class="md-tall"><span flex="flex"></span>
+<md-toolbar layout="column" class="md-tall">
+  <span flex="flex"></span>
   <div class="md-toolbar-tools">
     <div layout="row" flex="flex" class="fill-height">
-      <div ng-hide="toggleSearch" class="md-toolbar-item md-breadcrumb"><span>Angular Material Table</span></div><span flex="flex" ng-hide="toggleSearch"></span>
-      <md-input-container flex="flex" style="padding-left:88px;" ng-show="toggleSearch">
-        <input type="text" ng-model="search"/>
-      </md-input-container>
-      <div layout="row" class="md-toolbar-item md-tools"><a href="href" ng-click="toggleSearch = !toggleSearch" class="md-button md-default-theme"><i class="ion-android-search"></i></a></div>
+      <md-select ng-model="ctrl.userState">
+        <md-option ng-repeat="pab in pabellones" value="{{pab.id}}">
+          {{pab.nombre}}
+        </md-option>
+      </md-select>
     </div>
   </div>
 </md-toolbar>
