Se agrego Diseño responsivo

--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -5,6 +5,7 @@ html
 	background-color #f2f2f2
 	font-family: 'Roboto', sans-serif
 	height 100%
+	overflow hiden
 
 .bg-app
 	min-height 200px
@@ -209,9 +210,7 @@ md-datepicker
 		.red
 			background-color: #ff8a80
 
-form
-	md-dialog-content
-		padding 0 !important
+
 
 md-tab-item
 	max-width none !important
@@ -236,3 +235,12 @@ md-datepicker
 	.md-datepicker-input-container
 		width 100%
 		margin-left 0
+
+a.groupTitle
+	text-decoration none
+	color #43A047
+
+
+.window-modal-content-sm
+	min-width 700px
+	max-height 800px
