--- a/client/app/views/blocks/app_header.html
+++ b/client/app/views/blocks/app_header.html
@@ -3,16 +3,17 @@
     <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
   </md-button>
   <h2>
-    <span>{{app.name}} {{app.module}}</span>
+    <span class="app-title">{{app.name}}</span> <span class="app-title-module">{{app.module}}</span>
   </h2>
   <span flex></span>
 
 
   <md-menu>
-          <md-button class="capitalize" ng-click="$mdOpenMenu()" aria-label="Open menu">
-              <md-icon md-font-icon="fa fa-cog fa-lg"></md-icon>
+          <md-button  class="md-icon-button" ng-click="$mdOpenMenu()" aria-label="Open menu">
+              <md-icon md-font-icon="fa fa-ellipsis-v fa-lg"></md-icon>
           </md-button>
           <md-menu-content>
+              <md-menu-item><md-button ui-sref='app'>Inicio</md-button></md-menu-item>
               <md-menu-item><md-button ng-click="$mdCloseMenu()">Configuración</md-button></md-menu-item>
               <md-menu-item><md-button ng-click="Logout()" >Log out</md-button></md-menu-item>
           </md-menu-content>
