--- a/client/app/views/pabellones/form.html
+++ b/client/app/views/pabellones/form.html
@@ -9,11 +9,18 @@
         </md-button>
       </div>
     </md-toolbar>
-    <md-dialog-content style="min-width:500px;max-height:810px; ">
-      <md-content class="md-padding">
-        <div  flex-container="row" flex-gutter="24">
-          <div flex-container="row" flex-gutter="24">
-            <div flex-item>
+    <md-dialog-content class="window-modal-content-sm">
+        <div  flex  layout="row" layout-sm="column">
+          <div flex="30" flex-sm="100">
+            <md-input-container class="md-block">
+              <label>Abreviatura</label>
+              <input required name="abreviatura" ng-model="model.abreviatura">
+              <div ng-messages="myForm.abreviatura.$error" ng-if="submited">
+                <div ng-message="required">{{message.Required}}</div>
+              </div>
+            </md-input-container>
+          </div>
+            <div flex="70" flex-sm="100">
               <md-input-container class="md-block">
                 <label>Nombre</label>
                 <input required name="nombre" ng-model="model.nombre">
@@ -22,31 +29,21 @@
                 </div>
               </md-input-container>
             </div>
-            <div flex-item>
-              <md-input-container class="md-block">
-                <label>Abreviatura</label>
-                <input required name="abreviatura" ng-model="model.abreviatura">
-                <div ng-messages="myForm.abreviatura.$error" ng-if="submited">
-                  <div ng-message="required">{{message.Required}}</div>
-                </div>
-              </md-input-container>
-            </div>
-          </div>
-           </div>
 
-      </md-content>
-      <div class="dialog__actions">
-          <div class="pull-left">
+        </div>
+
+         <div  flex  layout="row" layout-sm="column">
+          <div flex="30" layout-align="start start" flex-sm="100" class="text-left">
             <md-checkbox ng-model="model.activo">
-                 Activo
-               </md-checkbox>
+                Activo
+              </md-checkbox>
           </div>
-         <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-         <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-    </div>
+          <div flex="70" layout="row"  layout-align="end center" flex-sm="100">
+            <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+            <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
+          </div>
+        </div>
     </md-dialog-content>
-    <md-dialog-actions layout="row">
 
-    </md-dialog-actions>
   </form>
 </md-dialog>
